@@ -12,6 +12,8 @@ MIDIboxSEQ V3.4
 
   o support for additional 8x8 button/LED matrix as used in Wilba's frontpanel layout
 
+  o support for dedicated Copy/Paste/Clear button
+
 
 MIDIboxSEQ V3.3
 ~~~~~~~~~~~~~~~
